--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,7 +63,11 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.google.firebase:firebase-messaging:11.6.2'
     compile 'com.ToxicBakery.viewpager.transforms:view-pager-transforms:1.2.32'
-    compile 'com.github.chrisbanes:PhotoView:2.1.3'
+    //compile 'com.github.chrisbanes:PhotoView:2.1.3'
+    // https://mvnrepository.com/artifact/com.github.chrisbanes.photoview/library
+    compile group: 'com.github.chrisbanes.photoview', name: 'library', version: '1.2.2'
+
+
     compile 'com.github.yalantis:ucrop:2.2.1-native'
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:multidex:1.0.0'
