--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,6 +69,9 @@ dependencies {
 
 
     compile 'com.github.yalantis:ucrop:2.2.1-native'
+
+    compile 'com.soundcloud.android:android-crop:1.0.1@aar'
+
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:multidex:1.0.0'
 }
