--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -151,6 +151,10 @@
             android:theme="@style/AppTheme.NoActionBar"
             android:windowSoftInputMode="stateHidden|adjustResize" />
         <activity
+            android:name=".activity.BirthDatePickerPopUpActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBarPopUp" />
+        <activity
             android:name=".activity.RegistrationOwnInfo"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
