--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,5 +74,6 @@ dependencies {
 
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:multidex:1.0.0'
+    compile 'com.squareup.okio:okio:1.13.0'
 }
 apply plugin: 'com.google.gms.google-services'
