back button press data persistance drag, zoom in/out text, image add mobile verification bug fix disable text show fix in profile view bug fix from https://trello.com/c/y9VwmG5c/292-issues-build-24-january

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -237,7 +237,8 @@
             android:name=".activity.AbroadOptionPickerPopUpActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBarPopUp" />
-        <activity android:name=".activity.FacebookRegistrationDataInput"></activity>
+        <activity android:name=".activity.FacebookRegistrationDataInput" />
+        <activity android:name=".activity.ThanksActivity"></activity>
     </application>
 
 </manifest>
