faq, about, jogajog change image upload stuck bug fix marriage status, cast default select as user set

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -102,7 +102,7 @@
             android:name=".activity.ContactUs"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme"
-            android:windowSoftInputMode="adjustResize" />
+            android:windowSoftInputMode="stateHidden|adjustResize" />
         <activity
             android:name=".activity.PaymentActivity"
             android:screenOrientation="portrait"
