--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -202,7 +202,7 @@
             android:name=".activity.RegistrationFamilyInfoSecondPage"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"
-            android:windowSoftInputMode="stateHidden|adjustResize"/>
+            android:windowSoftInputMode="stateHidden|adjustResize" />
         <activity
             android:name=".activity.PopUpFamilyInfoSecondPage"
             android:screenOrientation="portrait"
@@ -238,9 +238,19 @@
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBarPopUp" />
         <activity android:name=".activity.FacebookRegistrationDataInput" />
-        <activity android:name=".activity.ThanksActivity"
-            android:screenOrientation="portrait">
-        </activity>
+        <activity
+            android:name=".activity.ThanksActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+
+        <activity
+            android:name=".activity.WebViewPayment"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <!--<activity-->
+            <!--android:name=".activity.PlansActivity"-->
+            <!--android:label="@string/title_activity_plans"-->
+            <!--android:theme="@style/AppTheme.NoActionBar"></activity>-->
     </application>
 
 </manifest>
