--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -246,7 +246,7 @@
         <activity
             android:name=".activity.WebViewPayment"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme"></activity>
         <!--<activity-->
             <!--android:name=".activity.PlansActivity"-->
             <!--android:label="@string/title_activity_plans"-->
