--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,8 +2,8 @@ apply plugin: 'com.android.application'
 
 
 android {
-    compileSdkVersion 26
-    buildToolsVersion '26.0.2'
+    compileSdkVersion 27
+    buildToolsVersion '27.0.3'
     defaultConfig {
         applicationId 'com.nascenia.biyeta'
         minSdkVersion 16
@@ -36,44 +36,44 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
-    compile 'com.android.support:appcompat-v7:26.1.0'
-    compile 'com.android.support:design:26.1.0'
-    compile 'com.github.bumptech.glide:glide:3.7.0'
-    compile 'com.android.support:support-v4:26.1.0'
-    compile 'com.android.support:cardview-v7:26.1.0'
-    compile 'com.android.support:recyclerview-v7:26.1.0'
-    compile 'com.squareup.okhttp:okhttp:2.5.0'
-    compile 'com.google.code.gson:gson:2.8.0'
-    compile 'me.bendik.simplerangeview:simplerangeview:0.1.1'
-    compile 'de.hdodenhof:circleimageview:2.1.0'
-    compile 'com.android.support:customtabs:26.1.0'
-    compile 'com.bignerdranch.android:expandablerecyclerview:3.0.0-RC1'
-    compile 'org.apache.commons:commons-lang3:3.4'
-    compile 'org.apache.commons:commons-collections4:4.1'
-    compile 'com.squareup.picasso:picasso:2.5.2'
-    compile 'net.rimoto:intlphoneinput:1.0.1'
-    compile 'com.facebook.android:facebook-android-sdk:[4,5)'
-    compile 'me.henrytao:smooth-app-bar-layout:24.1.0.0'
-    compile 'com.google.android.gms:play-services-analytics:11.6.2'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.google.firebase:firebase-messaging:11.6.2'
-    compile 'com.ToxicBakery.viewpager.transforms:view-pager-transforms:1.2.32'
+    implementation 'com.android.support:appcompat-v7:27.0.2'
+    implementation 'com.android.support:design:27.0.2'
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
+    implementation 'com.android.support:support-v4:27.0.2'
+    implementation 'com.android.support:cardview-v7:27.0.2'
+    implementation 'com.android.support:recyclerview-v7:27.0.2'
+    implementation 'com.squareup.okhttp:okhttp:2.6.0'
+    implementation 'com.google.code.gson:gson:2.8.0'
+    implementation 'me.bendik.simplerangeview:simplerangeview:0.1.1'
+    implementation 'de.hdodenhof:circleimageview:2.1.0'
+    implementation 'com.android.support:customtabs:27.0.2'
+    implementation 'com.bignerdranch.android:expandablerecyclerview:3.0.0-RC1'
+    implementation 'org.apache.commons:commons-lang3:3.4'
+    implementation 'org.apache.commons:commons-collections4:4.1'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'net.rimoto:intlphoneinput:1.0.1'
+    implementation 'com.facebook.android:facebook-android-sdk:4.32.0'
+    implementation 'me.henrytao:smooth-app-bar-layout:24.1.0.0'
+    implementation 'com.google.android.gms:play-services-analytics:15.0.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.0'
+    implementation 'com.google.firebase:firebase-messaging:15.0.0'
+    implementation 'com.ToxicBakery.viewpager.transforms:view-pager-transforms:1.2.32'
     //compile 'com.github.chrisbanes:PhotoView:2.1.3'
     // https://mvnrepository.com/artifact/com.github.chrisbanes.photoview/library
-    compile group: 'com.github.chrisbanes.photoview', name: 'library', version: '1.2.2'
+    implementation group: 'com.github.chrisbanes.photoview', name: 'library', version: '1.2.4'
 
 
-    compile 'com.github.yalantis:ucrop:2.2.1-native'
+    implementation 'com.github.yalantis:ucrop:2.2.1-native'
 
-    compile 'com.soundcloud.android:android-crop:1.0.1@aar'
+    implementation 'com.soundcloud.android:android-crop:1.0.1@aar'
 
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:multidex:1.0.0'
-    compile 'com.squareup.okio:okio:1.13.0'
+    implementation 'com.android.support:multidex:1.0.3'
+    implementation 'com.squareup.okio:okio:1.13.0'
 }
 apply plugin: 'com.google.gms.google-services'
