--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,12 @@ android {
     flavorDimensions "default"
     buildTypes {
         release {
+            debuggable true
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+        debug {
+            debuggable true
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
@@ -41,17 +47,17 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
-    implementation 'com.android.support:appcompat-v7:27.0.2'
-    implementation 'com.android.support:design:27.0.2'
+    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'com.android.support:design:27.1.1'
     implementation 'com.github.bumptech.glide:glide:3.7.0'
-    implementation 'com.android.support:support-v4:27.0.2'
-    implementation 'com.android.support:cardview-v7:27.0.2'
-    implementation 'com.android.support:recyclerview-v7:27.0.2'
+    implementation 'com.android.support:support-v4:27.1.1'
+    implementation 'com.android.support:cardview-v7:27.1.1'
+    implementation 'com.android.support:recyclerview-v7:27.1.1'
     implementation 'com.squareup.okhttp:okhttp:2.6.0'
     implementation 'com.google.code.gson:gson:2.8.0'
     implementation 'me.bendik.simplerangeview:simplerangeview:0.1.1'
     implementation 'de.hdodenhof:circleimageview:2.1.0'
-    implementation 'com.android.support:customtabs:27.0.2'
+    implementation 'com.android.support:customtabs:27.1.1'
     implementation 'com.bignerdranch.android:expandablerecyclerview:3.0.0-RC1'
     implementation 'org.apache.commons:commons-lang3:3.4'
     implementation 'org.apache.commons:commons-collections4:4.1'
@@ -59,9 +65,9 @@ dependencies {
     implementation 'net.rimoto:intlphoneinput:1.0.1'
     implementation 'com.facebook.android:facebook-android-sdk:4.32.0'
     implementation 'me.henrytao:smooth-app-bar-layout:24.1.0.0'
-    implementation 'com.google.android.gms:play-services-analytics:15.0.0'
+    implementation 'com.google.android.gms:play-services-analytics:15.0.2'
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
-    implementation 'com.google.firebase:firebase-messaging:15.0.0'
+    implementation 'com.google.firebase:firebase-messaging:15.0.2'
     implementation 'com.ToxicBakery.viewpager.transforms:view-pager-transforms:1.2.32'
     //compile 'com.github.chrisbanes:PhotoView:2.1.3'
     // https://mvnrepository.com/artifact/com.github.chrisbanes.photoview/library
@@ -72,8 +78,9 @@ dependencies {
 
     implementation 'com.soundcloud.android:android-crop:1.0.1@aar'
 
-    testCompile 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.12'
     implementation 'com.android.support:multidex:1.0.3'
     implementation 'com.squareup.okio:okio:1.13.0'
+    implementation "android.arch.lifecycle:extensions:1.1.1"
 }
 apply plugin: 'com.google.gms.google-services'
