--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,11 +21,6 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
-        debug {
-            debuggable true
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
     }
 
     productFlavors {
@@ -53,7 +48,7 @@ dependencies {
     implementation 'com.android.support:support-v4:27.1.1'
     implementation 'com.android.support:cardview-v7:27.1.1'
     implementation 'com.android.support:recyclerview-v7:27.1.1'
-    implementation 'com.squareup.okhttp:okhttp:2.6.0'
+    implementation 'com.squareup.okhttp:okhttp:2.5.0'
     implementation 'com.google.code.gson:gson:2.8.0'
     implementation 'me.bendik.simplerangeview:simplerangeview:0.1.1'
     implementation 'de.hdodenhof:circleimageview:2.1.0'
@@ -63,24 +58,19 @@ dependencies {
     implementation 'org.apache.commons:commons-collections4:4.1'
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'net.rimoto:intlphoneinput:1.0.1'
-    implementation 'com.facebook.android:facebook-android-sdk:4.32.0'
+    implementation 'com.facebook.android:facebook-android-sdk:[4,5)'
     implementation 'me.henrytao:smooth-app-bar-layout:24.1.0.0'
-    implementation 'com.google.android.gms:play-services-analytics:15.0.2'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.0'
-    implementation 'com.google.firebase:firebase-messaging:15.0.2'
+    implementation 'com.google.android.gms:play-services-analytics:11.6.2'
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.google.firebase:firebase-messaging:11.6.2'
     implementation 'com.ToxicBakery.viewpager.transforms:view-pager-transforms:1.2.32'
-    //compile 'com.github.chrisbanes:PhotoView:2.1.3'
+    //implementation 'com.github.chrisbanes:PhotoView:2.1.3'
     // https://mvnrepository.com/artifact/com.github.chrisbanes.photoview/library
-    implementation group: 'com.github.chrisbanes.photoview', name: 'library', version: '1.2.4'
-
-
+    implementation group: 'com.github.chrisbanes.photoview', name: 'library', version: '1.2.2'
     implementation 'com.github.yalantis:ucrop:2.2.1-native'
-
     implementation 'com.soundcloud.android:android-crop:1.0.1@aar'
-
     testImplementation 'junit:junit:4.12'
-    implementation 'com.android.support:multidex:1.0.3'
+    implementation 'com.android.support:multidex:1.0.0'
     implementation 'com.squareup.okio:okio:1.13.0'
-    implementation "android.arch.lifecycle:extensions:1.1.1"
 }
 apply plugin: 'com.google.gms.google-services'
