--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,14 +2,14 @@ apply plugin: 'com.android.application'
 
 
 android {
-    compileSdkVersion 27
-    buildToolsVersion '27.0.3'
+    compileSdkVersion 28
+    buildToolsVersion '28.0.2'
     defaultConfig {
         applicationId 'com.nascenia.biyeta'
         minSdkVersion 16
-        targetSdkVersion 26
-        versionCode 19
-        versionName "2.4"
+        targetSdkVersion 27
+        versionCode 20
+        versionName "2.5"
         multiDexEnabled true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
@@ -42,27 +42,27 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
-    implementation 'com.android.support:appcompat-v7:27.1.1'
-    implementation 'com.android.support:design:27.1.1'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support:design:28.0.0'
     implementation 'com.github.bumptech.glide:glide:3.7.0'
-    implementation 'com.android.support:support-v4:27.1.1'
-    implementation 'com.android.support:cardview-v7:27.1.1'
-    implementation 'com.android.support:recyclerview-v7:27.1.1'
+    implementation 'com.android.support:support-v4:28.0.0'
+    implementation 'com.android.support:cardview-v7:28.0.0'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.squareup.okhttp:okhttp:2.6.0'
     implementation 'com.google.code.gson:gson:2.8.0'
     implementation 'me.bendik.simplerangeview:simplerangeview:0.1.1'
     implementation 'de.hdodenhof:circleimageview:2.1.0'
-    implementation 'com.android.support:customtabs:27.1.1'
+    implementation 'com.android.support:customtabs:28.0.0'
     implementation 'com.bignerdranch.android:expandablerecyclerview:3.0.0-RC1'
     implementation 'org.apache.commons:commons-lang3:3.4'
     implementation 'org.apache.commons:commons-collections4:4.1'
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'net.rimoto:intlphoneinput:1.0.1'
-    implementation 'com.facebook.android:facebook-android-sdk:4.36.1'
+    implementation 'com.facebook.android:facebook-android-sdk:4.37.0'
     implementation 'me.henrytao:smooth-app-bar-layout:24.1.0.0'
-    implementation 'com.google.android.gms:play-services-analytics:16.0.3'
+    implementation 'com.google.android.gms:play-services-analytics:16.0.4'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    implementation 'com.google.firebase:firebase-messaging:17.3.1'
+    implementation 'com.google.firebase:firebase-messaging:17.3.3'
     implementation 'com.ToxicBakery.viewpager.transforms:view-pager-transforms:1.2.32'
     //implementation 'com.github.chrisbanes:PhotoView:2.1.3'zzzzzl
     // https://mvnrepository.com/artifact/com.github.chrisbanes.photoview/library
@@ -74,3 +74,4 @@ dependencies {
     implementation 'com.squareup.okio:okio:1.13.0'
 }
 apply plugin: 'com.google.gms.google-services'
+com.google.gms.googleservices.GoogleServicesPlugin.config.disableVersionCheck = true
